Updated last question

--- a/Assignment5_MERGED.ipynb
+++ b/Assignment5_MERGED.ipynb
@@ -900,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Interpretation of Result** The heirarchical model causes convergence to a smaller range of $\\sigma^2$ values compared to individually applying the model to each school. The w1 and w2 values also converge slightly. This effect seems to be centered around the schools with a greater number of students, as evidenced by the lighter quivers grouped in the center of the cluster, with the smaller schools more along the periphery. "
+    "**Interpretation of Result** The hierarchical model causes convergence to a single $\\sigma^2$ value compared to individually applying the model to each school. The w1 and w2 values also converge slightly. This effect seems to be centered around the schools with a greater number of students, as evidenced by the lighter quivers grouped in the center of the cluster, with the smaller schools more along the periphery. "
    ]
   }
  ],
